--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<div class="col-md-2"></div>
 			<div class="col-md-4">
 				<div class="team-box">
-					<img src="lisa.jpg" class="img-circle img-thumbnail" alt="">
+					<img src="lisa.JPG" class="img-circle img-thumbnail" alt="">
 					<h4>Lisa Dewi Dzakiyah Muthi</h4>
 					<p>Latar belakang dari SMK Akuntansi dan berprofesi sebagai penulis tidak menggetarkan tujuan menjadi seorang yang mudah puas, selalu terbuka untuk ilmu yang baru.</p><br>
 				</div>
@@ -57,7 +57,7 @@
 
 			<div class="col-md-4">
 					<div class="team-box">
-						<img src="aqib.jpg" class="img-circle img-thumbnail" alt="">
+						<img src="aqib.JPG" class="img-circle img-thumbnail" alt="">
 						<h4>M. Khusnul Aqib</h4>
 						<p>Kak Ilham, ingin berasal dari keluarga Zoldyck namun berkarismatik seperti Klan Uciha dan bijaksana seperti Avatar.</p>
 					</div>
