--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<title>MATIK |Project Team F42 HTML&CSS</title>
 	<link rel="shortcut icon" href="icon.jpg">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Hind:500,600,700" rel="stylesheet">
@@ -30,6 +32,74 @@
 </head>
 <body  data-spy="scroll" data-target="#data-scroll">
  <!-- Loader -->
+<header>
+     <div class="container">
+        <div class="header-left">
+          <img class="logo" src="http://matik.id/img/logo.png" height="35px">
+        </div>
+        <div class="header-right">
+            <a href="#" class="active">Home</a>
+            <a href="#">Services</a>
+            <a href="#">Member</a>
+            <a href="#">Team</a>
+            <a href="#">Contact</a>
+            <a href="#" class="login">Log in</a>
+        </div>
+      </div> 
+    </header>
+    <div class="top-wrapper">
+        <div class="container">
+            <h1> Project Team F42 </h1>
+            <h1> LETS BE A WEB DEVELOPER PROFESIONAL.</h1>
+            <p> Ingin belajar coding secara online dengan lebih terarah ? Gabung sekarang dan dapatkan ratusan modul belajar pemrograman premium dalam beragam format dengan materi silabus lengkap dan tersusun rapi dari awal hingga akhir. Kami menawarkan lingkungan pemrograman yang lengkap untuk mempermudah Anda memulai.</p>
+            <div class="btn-wrapper">
+                <a href="#" class="btn signup">Gabung Sekarang Juga</a>
+                <p>atau</p>
+                <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
+                <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
+            </div>
+        </div>
+    </div>
+    <div class="lesson-wrapper">
+      <div class="container">
+        <div class="heading">
+           <p>WHAT WE DO</p>
+           <h2>Our Cool Services</h2>
+        </div>
+        <div class="lessons">
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="undraw_contract_uy56.svg" align="center" height="80px" width="100px">
+            </div>
+            <h3> Konsultasi</h3>
+            <p class="txt-contents">Kami menyediakan pelayanan konsultasi seputar masalah bisnis pemasaran online.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="undraw_online_test_gba7.svg" align="center" height="80px" width="100px">
+            </div>
+            <h3> Pelatihan Intensif</h3>
+            <p class="txt-contents">Programmer Web, Desainer Web, Java, Android, Desain Grafis dan Pemasaran Internet.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="undraw_broadcast_jhwx.svg" align="center" height="80px" width="100px">
+            </div>
+            <h3> Pemasangan Internet / Jaringan</h3>
+            <p class="txt-contents">Kami menyediakan pemasangan jaringan dan koneksi internet.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="undraw_buffer_wq43.svg" align="center" height="80px" width="100px">
+            </div>
+            <h3> Jasa Aplikasi</h3>
+            <p class="txt-contents">Jasa pembuatan aplikasi, situs web untuk kebutuhan anda.</p>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </div>
+    </div>
+	
  <div id="preloader"><div id="status"><div class="spinner">Loading...</div></div></div>
 
 <!-- TEAM -->
