--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 			<div class="col-md-4">
 					<div class="team-box">
 						<img src="aqib.JPG" class="img-circle img-thumbnail" alt="">
-						<h4>M. Khusnul Aqib</h4>
-						<p>Kak Ilham, ingin berasal dari keluarga Zoldyck namun berkarismatik seperti Klan Uciha dan bijaksana seperti Avatar.</p>
+						<h4>Maulida Khusnul 'Aqib</h4>
+						<p>Kak Aqib, Latar belakang dari kampus Institut Teknologi Sumatera (ITERA) yang rajin, suka menabung dan berbudiman. Sebenernya ingin berasal dari keluarga inisial D. namun berkarismatik seperti Klan Uciha dan bijaksana seperti Avatar.</p>
 					</div>
 				</div> <!-- end col -->
 				<div class="col-md-2"></div>
