--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<div class="team-box">
 					<img src="lisa.JPG" class="img-circle img-thumbnail" alt="">
 					<h4>Lisa Dewi Dzakiyah Muthi</h4>
-					<p>Latar belakang dari SMK Akuntansi dan berprofesi sebagai penulis tidak menggetarkan tujuan menjadi seorang yang mudah puas, selalu terbuka untuk ilmu yang baru.</p><br>
+					<p>Kak Lisa, Latar belakang dari SMK Akuntansi dan berprofesi sebagai penulis tidak menggetarkan tujuan menjadi seorang yang mudah puas, selalu terbuka untuk ilmu yang baru.</p><br>
 				</div>
 			</div> <!-- end col -->
 
