--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>MATIK |Project Team F42 HTML&CSS</title>
+	<title>F42 Team | Homepage</title>
 	<link rel="shortcut icon" href="icon.jpg">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<!-- Google Fonts -->
@@ -35,12 +35,11 @@
 <header>
      <div class="container">
         <div class="header-left">
-          <img class="logo" src="http://matik.id/img/logo.png" height="35px">
+          <img class="logo" src="icon.jpg" height="35px">
         </div>
         <div class="header-right">
             <a href="#" class="active">Home</a>
             <a href="#">Services</a>
-            <a href="#">Member</a>
             <a href="#">Team</a>
             <a href="#">Contact</a>
             <a href="#" class="login">Log in</a>
