--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <header>
      <div class="container">
         <div class="header-left">
-          <img class="logo" src="icon.jpg" height="35px">
+	     <h4>F42 Team </h4>
         </div>
         <div class="header-right">
             <a href="#" class="active">Home</a>
