--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
 	<!--SEO Meta Tags-->
 	<meta charset="utf-8" />
+	<title>F42 Team | Homepage</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>F42 Team | Homepage</title>
 	<link rel="shortcut icon" href="icon.jpg">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Hind:500,600,700" rel="stylesheet">
@@ -32,71 +31,117 @@
 </head>
 <body  data-spy="scroll" data-target="#data-scroll">
  <!-- Loader -->
-<header>
-     <div class="container">
-        <div class="header-right">
-            <a href="#" class="active">Home</a>
-            <a href="#">Services</a>
-            <a href="#">Team</a>
-            <a href="#">Contact</a>
-            <a href="#" class="login">Log in</a>
-        </div>
-      </div> 
-    </header>
-    <div class="top-wrapper">
-        <div class="container">
-            <h1> Project Team F42 </h1>
-            <h1> LETS BE A WEB DEVELOPER PROFESIONAL.</h1>
-            <p> Ingin belajar coding secara online dengan lebih terarah ? Gabung sekarang dan dapatkan ratusan modul belajar pemrograman premium dalam beragam format dengan materi silabus lengkap dan tersusun rapi dari awal hingga akhir. Kami menawarkan lingkungan pemrograman yang lengkap untuk mempermudah Anda memulai.</p>
-            <div class="btn-wrapper">
+ <div id="preloader"><div id="status"><div class="spinner">Loading...</div></div></div>
+
+ <!-- Navbar -->
+<div class="navbar navbar-custom sticky navbar-header-white" role="navigation">
+	<div class="container">
+		<!-- Navbar-header -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<img src="https://img.icons8.com/fluent/30/000000/menu--v2.png"/>
+			</button>
+			<!-- LOGO -->
+			<a class="navbar-brand logo" href="https://f42team.github.io/">
+				<img src="progate.jpg" height="35px">
+			</a>
+		</div>
+		<!-- end navbar-header -->
+
+		<!-- menu -->
+		<div class="navbar-collapse collapse" id="data-scroll">
+			<ul class="nav navbar-nav navbar-right">
+				<li class="active">
+					<a href="#home">Home</a>
+				</li>
+				<li>
+					<a href="#services">Services</a>
+				</li>
+				<li>
+					<a href="#team">Team</a>
+				</li>
+				<li>
+					<a href="#contact">Contact</a>
+				</li>
+
+			</ul>
+		</div>
+		<!--/Menu -->
+	</div>
+	<!-- end container -->
+</div>
+ <section class="home bg-home home-header-2" id="home">
+
+	<div class="bg-overlay"></div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="home-wrapper text-center row">
+					<div class="col-md-8 col-md-offset-2">
+						<h1>F42 Project Team</h1>
+						<h3>Let's Be a Professional Web Developer</h3>
+						<h4>Ingin belajar coding secara online dengan lebih terarah ? Gabung sekarang dan dapatkan ratusan modul belajar pemrograman premium dalam beragam format dengan materi silabus lengkap dan tersusun rapi dari awal hingga akhir. Kami menawarkan lingkungan pemrograman yang lengkap untuk mempermudah Anda memulai.
+						</h4>
+						<div class="btn-wrapper">
                 <a href="#" class="btn signup">Gabung Sekarang Juga</a>
                 <p>atau</p>
                 <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
                 <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
             </div>
-        </div>
-    </div>
-    <div class="lesson-wrapper">
-      <div class="container">
-        <div class="heading">
-           <p>WHAT WE DO</p>
-           <h2>Our Cool Services</h2>
-        </div>
-        <div class="lessons">
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="undraw_contract_uy56.svg" align="center" height="80px" width="100px">
-            </div>
-            <h3> Konsultasi</h3>
-            <p class="txt-contents">Kami menyediakan pelayanan konsultasi seputar masalah bisnis pemasaran online.</p>
-          </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="undraw_online_test_gba7.svg" align="center" height="80px" width="100px">
-            </div>
-            <h3> Pelatihan Intensif</h3>
-            <p class="txt-contents">Programmer Web, Desainer Web, Java, Android, Desain Grafis dan Pemasaran Internet.</p>
-          </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="undraw_broadcast_jhwx.svg" align="center" height="80px" width="100px">
-            </div>
-            <h3> Pemasangan Internet / Jaringan</h3>
-            <p class="txt-contents">Kami menyediakan pemasangan jaringan dan koneksi internet.</p>
-          </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="undraw_buffer_wq43.svg" align="center" height="80px" width="100px">
-            </div>
-            <h3> Jasa Aplikasi</h3>
-            <p class="txt-contents">Jasa pembuatan aplikasi, situs web untuk kebutuhan anda.</p>
-          </div>
-          <div class="clear"></div>
-        </div>
-      </div>
-    </div>
-	
- <div id="preloader"><div id="status"><div class="spinner">Loading...</div></div></div>
+					</div>
+				</div>
+			</div> <!-- end col -->
+		</div> <!-- end row -->
+	</div>
+	<!-- end container -->
+</section>
+<!-- END HOME -->
+
+<!-- SERVICES -->
+<section class="section" id="services">
+	<div class="container">
+
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="title-box text-center">
+					<p>What We Do</p>
+					<h2>Our Cool Services</h2>
+					</div>
+				</div>
+			</div>
+			<!-- end row -->
+
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="services-box">
+						<img src="pelatihan.svg" align="center" height="80px" width="100px">
+						<h4>Pelatihan Intensif</h4>
+						<p>Web Programmer, Web Designer, dan UI UX</p>
+					</div>
+				</div> <!-- end col -->
+
+				<div class="col-sm-4">
+					<div class="services-box">
+						<img src="broadcast.svg" align="center" height="80px" width="100px">
+						<h4>Pemasangan Internet/Jaringan</h4>
+						<p>Kami menyediakan pemasangan jaringan dan koneksi internet</p>
+					</div>
+				</div> <!-- end col -->
+
+				<div class="col-sm-4">
+					<div class="services-box">
+						<img src="jasa.svg" align="center" height="80px" width="100px">
+						<h4>Jasa Aplikasi</h4>
+						<p>Jasa pembuatan aplikasi, website untuk kebutuhan anda</p>
+					</div>
+				</div> <!-- end col -->
+			</div>
+			<!-- end row -->
+
+		</div> <!-- end container -->
+	</section>
+	<!-- end SERVICES -->
 
 <!-- TEAM -->
 	<section class="section bg-lightgray" id="team">
@@ -115,17 +160,17 @@
 				<div class="col-md-2"></div>
 			<div class="col-md-4">
 				<div class="team-box">
-					<img src="lisa.JPG" class="img-circle img-thumbnail" alt="">
+					<img src="lisa.jpg" class="img-circle img-thumbnail" alt="">
 					<h4>Lisa Dewi Dzakiyah Muthi</h4>
-					<p>Kak Lisa, Latar belakang dari SMK Akuntansi dan berprofesi sebagai penulis tidak menggetarkan tujuan menjadi seorang yang mudah puas, selalu terbuka untuk ilmu yang baru.</p><br>
+					<p>Latar belakang dari SMK Akuntansi dan berprofesi sebagai penulis, berharap punya ilmu sihir seperti harry potter supaya bisa menjadi women who code.</p><br>
 				</div>
 			</div> <!-- end col -->
 
 			<div class="col-md-4">
 					<div class="team-box">
-						<img src="aqib.JPG" class="img-circle img-thumbnail" alt="">
-						<h4>Maulida Khusnul 'Aqib</h4>
-						<p>Kak Aqib, Latar belakang dari kampus Institut Teknologi Sumatera (ITERA) yang rajin, suka menabung dan berbudiman. Sebenernya ingin berasal dari keluarga inisial D. namun berkarismatik seperti Klan Uciha dan bijaksana seperti Avatar.</p>
+						<img src="aqib.jpg" class="img-circle img-thumbnail" alt="">
+						<h4>Maulida Khusnul Aqib</h4>
+						<p>Kak Aqib,Latar belakang dari kampus Institut Teknologi Sumatera (ITERA) yang rajin, suka menabung dan berbudiman. Sebenernya ingin berasal dari keluarga inisial D. namun berkarismatik seperti Klan Uciha dan bijaksana seperti Avatar.</p>
 					</div>
 				</div> <!-- end col -->
 				<div class="col-md-2"></div>
