--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				<div class="col-md-2"></div>
 			<div class="col-md-4">
 				<div class="team-box">
-					<img src="lisa.jpg" class="img-circle img-thumbnail" alt="">
+					<img src="lisa.j"JPGclass="img-circle img-thumbnail" alt="">
 					<h4>Lisa Dewi Dzakiyah Muthi</h4>
 					<p>Latar belakang dari SMK Akuntansi dan berprofesi sebagai penulis, berharap punya ilmu sihir seperti harry potter supaya bisa menjadi women who code.</p><br>
 				</div>
@@ -168,7 +168,7 @@
 
 			<div class="col-md-4">
 					<div class="team-box">
-						<img src="aqib.jpg" class="img-circle img-thumbnail" alt="">
+						<img src="aqib.JPG" class="img-circle img-thumbnail" alt="">
 						<h4>Maulida Khusnul Aqib</h4>
 						<p>Kak Aqib,Latar belakang dari kampus Institut Teknologi Sumatera (ITERA) yang rajin, suka menabung dan berbudiman. Sebenernya ingin berasal dari keluarga inisial D. namun berkarismatik seperti Klan Uciha dan bijaksana seperti Avatar.</p>
 					</div>
